# custom-shell

./: .gitignore  .gitmodules  CMakeLists.txt  INSTALL.MD  Makefile  batchfile.txt  settings.json  test_command.txt
include/: batch_file.h  commands.h  internal_commands.h  monitor.h  shell.h  signals.h
src/: batch_file.c  commands.c  internal_commands.c  monitor.c  shell.c  signals.c
test_configs/: app.config  settings.json
test_configs/subdir/: db.config  debug.config
tests/: CMakeLists.txt  test_shell.c
